--- a/app/templates/app/base.html
+++ b/app/templates/app/base.html
@@ -52,10 +52,11 @@
              </ul>
            </li>
          </ul>
-         <form class="d-flex">
-           <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-           <button class="btn btn-warning" type="submit">A</button>
-         </form>
+         <form class="d-flex" method="get" action="{% url 'search' %}">
+         <input class="form-control me-2" type="search" name="query" placeholder="Search..." aria-label="Search">
+         <button class="btn btn-warning" type="submit">Search</button>
+        </form>
+
          <div>
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           {% if request.user.is_authenticated %}
