--- a/app/templates/app/checkout.html
+++ b/app/templates/app/checkout.html
@@ -16,7 +16,7 @@
         </div>
       </div>
       {% endfor %}
-      <p class="fw-bold">Total Amount + Shipping Rs. 70 = Rs. {{totalamount}}</p>
+      <p class="fw-bold">Total Amount + Shipping tk. 70 = Rs. {{totalamount}}</p>
     <small>Term and Condition: Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia, ullam saepe! Iure optio repellat dolor velit, minus rem. Facilis cumque neque numquam laboriosam, accusantium adipisci nisi nihil in et quis?</small>
   </div>
   <div class="col-sm-4 offset-sm-1">
