--- a/app/templates/app/mobile.html
+++ b/app/templates/app/mobile.html
@@ -21,7 +21,7 @@
                 <div class="item">
                     <img src="{{product.product_image.url}}" alt="" height="300" class="">
                     <div class="fw-bold">{{product.title}}</div>
-                    <div class="fw-bold">Rs. {{product.discounted_price}}
+                    <div class="fw-bold">tk. {{product.discounted_price}}
                         <small class="fw-light text-decoration-line-through">{{product.selling_price}}</small></div>
                 </div>
             </a>
