--- a/app/templates/app/productdetail.html
+++ b/app/templates/app/productdetail.html
@@ -11,7 +11,7 @@
    <h2>Product Title: {{product.title}}</h2>
    <hr>
    <p>{{product.description}}</p> <br>
-   <h4>Rs. {{product.discounted_price}} <small class="fw-light text-decoration-line-through">Rs. {{product.selling_price}}</small></h4> <br>
+   <h4>tk. {{product.discounted_price}} <small class="fw-light text-decoration-line-through">Rs. {{product.selling_price}}</small></h4> <br>
 
    {% if request.user.is_authenticated %}
 
@@ -36,9 +36,9 @@
    <h5 class="mt-5">Available Offers</h5>
    <ul>
     <li>Bank Offer 5% Unlimited Cashback on Flipkart Axis Bank Credit</li>
-    <li>Special Price Get extra ₹3000 off (price inclusive of discount)</li>
-    <li>No cost EMI ₹1,667/month. Standard EMI also available</li>
-    <li>Partner Offer ₹2000 Flipkart Gift Card on Every 1000th Transaction with a new Visa Debit/Credit Card</li>
+    <li>Special Price Get extra 3000 off (price inclusive of discount)</li>
+    <li>No cost EMI 1,667/month. Standard EMI also available</li>
+    <li>Partner Offer 2000 Flipkart Gift Card on Every 1000th Transaction with a new Visa Debit/Credit Card</li>
    </ul>
   </div>
  </div>
