--- a/app/templates/app/checkout.html
+++ b/app/templates/app/checkout.html
@@ -1,44 +1,40 @@
 {% extends 'app/base.html' %}
-{% load static %}
 {% block title %}Checkout{% endblock title %}
 {% block main-content %}
-<div class="container">
- <div class="row mt-5">
-  <div class="col-sm-6">
-    <h4>Order Summary</h4>
-    <hr>
-    {% for item in cart_items %}
+<div class="container mt-5">
+  <div class="row">
+    <div class="col-md-6">
+      <h4>Order Summary</h4>
+      <hr>
+      {% for item in cart_items %}
       <div class="card mb-2">
         <div class="card-body">
-          <h5>Product: {{item.product.title}}</h5>
-          <p>Quantity: {{item.quantity}} </p>
-          <p class="fw-bold">Price: {{item.total_cost}} </p>
+          <h5>{{ item.product.title }}</h5>
+          <p>Quantity: {{ item.quantity }}</p>
+          <p>Price: ৳{{ item.total_cost }}</p>
         </div>
       </div>
       {% endfor %}
-      <p class="fw-bold">Total Amount + Shipping tk. 70 = Rs. {{totalamount}}</p>
-    <small>Term and Condition: Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia, ullam saepe! Iure optio repellat dolor velit, minus rem. Facilis cumque neque numquam laboriosam, accusantium adipisci nisi nihil in et quis?</small>
-  </div>
-  <div class="col-sm-4 offset-sm-1">
-    <h4>Select Shipping Address</h4>
-    <hr>
-    <form action="/paymentdone">
-      {% for ad in add %}
-      <div class="card">
-        <div class="card-body">
-        <h5>{{ad.name}}</h5>
-        <p>{{ad.locality}}, {{ad.city}}, {{ad.state}} - {{ad.zipcode}}</p>
+      <h5>Total + Shipping (৳70): ৳{{ totalamount }}</h5>
+    </div>
+
+    <div class="col-md-6">
+      <h4>Shipping Address</h4>
+      <hr>
+      <form method="post" action="{% url 'create_checkout_session' %}">
+        {% csrf_token %}
+        {% for ad in add %}
+        <div class="card mb-2">
+          <div class="card-body">
+            <h6>{{ ad.name }}</h6>
+            <p>{{ ad.locality }}, {{ ad.city }}, {{ ad.state }} - {{ ad.zipcode }}</p>
+            <input type="radio" name="custid" value="{{ ad.id }}" required> Use this
+          </div>
         </div>
-      </div>
-        <div class="form-check mt-2 mb-5">
-          <input class="form-check-input" type="radio" name="custid" id="custadd{{forloop.counter}}" value="{{ad.id}}">
-          <label class="form-check-label fw-bold" for="custadd{{forloop.counter}}">
-            Address: {{forloop.counter}} </label>
-        </div>
-         {% endfor %}
-        <div class="text-end">
-          <button type="submit" class="btn btn-warning mt-3 px-5 fw-bold">Continue</button>
-        </div>
+        {% empty %}
+        <p class="text-danger">No address added yet.</p>
+        {% endfor %}
+        <button type="submit" class="btn btn-warning mt-3">Continue to Payment</button>
       </form>
     </div>
   </div>
